
    Multisite:
    * 3959 Two new filters for the comment view: author and comment text field
    * 3897 FIX: Fixed possible exception in raw edition when rendering graphs
    * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
    * 3902 FIX: Graph search view: Changing painter options made page empty

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3901 Logfile pattern analyser: pattern lists can now be searched
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...

    Notifications:
    * 3957 mail: now allows extra HTML section between body and table
    * 3900 FIX: Notification analysis: Fixed wrong color for host notification states
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised
    * 3944 Added OS related information for Cisco, Fireeye and Infoblox devices...
    * 3908 winperf_if, lnx_if: new inventory plugins for switch port statistics of linux and windows hosts
    * 3946 uptime: added the uptime to inventory...


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...
    * 3531 Reduced Check_MK helper size for certain dists/python versions...